updated ui changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- This is the header section -->
     <header class="header">
         <div class="header-container">
-            <a href="" class="logo">
+            <a href="#" class="logo">
                 <!-- <img draggable="false" src="./assets/cursor-logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
                 <!-- Initially i used a image for logo but now i replaced it with a video, the logo animation is visible when we click it -->
                 <video src="./assets/cursor-logos/logo-animated-dark.mp4" width="22px" autoplay></video>
@@ -20,15 +20,15 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="/" class="nav-btn-1 nav-btn">Product</a></li>
-                    <li><a href="/" class="nav-btn-2 nav-btn">Enterprise</a></li>
-                    <li><a href="/" class="nav-btn-3 nav-btn">Pricing</a></li>
-                    <li><a href="/" class="nav-btn-4 nav-btn">Resources</a></li>
+                    <li><a href="#" class="nav-btn-1 nav-btn">Product</a></li>
+                    <li><a href="#" class="nav-btn-2 nav-btn">Enterprise</a></li>
+                    <li><a href="#" class="nav-btn-3 nav-btn">Pricing</a></li>
+                    <li><a href="#" class="nav-btn-4 nav-btn">Resources</a></li>
                 </ul>
             </nav>
             <div class="header-btns">
-                <a href="/" class="btn-sn">Sign in</a>
-                <a href="/" class="btn-dl">Download</a>
+                <a href="#" class="btn-sn">Sign in</a>
+                <a href="#" class="btn-dl">Download</a>
             </div>
     </header>
 
@@ -37,20 +37,19 @@
         <section class="main-sections section-1">
             <div class="hero-section">
                 <h1>Built to make you extraordinarily productive, Cursor is the best way to code with AI.</h1>
-                <a href="/" class="cta-btn">Download for macOS ⤓</a>
+                <a href="#" class="cta-btn">Download for macOS
+                    <span> ⤓</span>
+                </a>
             </div>
             <div class="bg-1">
                 <div class="editor editor-main">
-                    <img draggable="false" src="assets/images/code-editor-s1-main.png" alt="">
-                </div>
-                <div class="editor editor-float">
-                    <img draggable="false" src="assets/images/code-editor-s1-float.png" alt="">
+                    <img draggable="false" src="assets/images/code-editor-s1-main-new.png" alt="">
                 </div>
             </div>
         </section>
         <section class="main-sections section-2">
             <!-- <div class="stack"> -->
-            <p>Trusted every day by millions of professional developers.</p>
+            <p>Trusted every day by teams that build world-class software</p>
             <div class="brand-cards">
                 <div class="brand-card">
                     <img draggable="false" src="assets/brand-logos/stripe.svg" alt="">
@@ -84,14 +83,14 @@
                 <div class="section-3-1-container">
                     <div class="sec-3-1-left">
                         <div class="sec-3-1-content">
-                            <h3>Agent turns ideas into code</h3>
-                            <p>A human-AI programmer, orders of magnitude more effective than any developer alone.</p>
-                            <div>Learn about Agent →</div>
+                            <h3>Agents turn ideas into code</h3>
+                            <p>Accelerate development by handing off tasks to Cursor, while you focus on making decisions.</p>
+                            <div>Learn about agentic development →</div>
                         </div>
                     </div>
                     <div class="sec-3-1-right">
                         <div class="editor editor-3-1">
-                            <img draggable="false" src="assets/images/code-editor-s3-1.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-1-new.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -106,7 +105,7 @@
                     <div class="sec-3-2-right">
                         <div class="sec-3-2-content">
                             <h3>Magically accurate autocomplete</h3>
-                            <p>Our custom Tab model predicts your next action with striking speed and precision.</p>
+                            <p>Our specialized Tab model predicts your next action with striking speed and precision.</p>
                             <div>Learn about Tab →</div>
                         </div>
                     </div>
@@ -116,18 +115,18 @@
                 <div class="section-3-3-container">
                     <div class="sec-3-3-left">
                         <div class="sec-3-3-content">
-                            <h3>Everywhere software gets built</h3>
-                            <p>Cursor is in GitHub reviewing your PRs, a teammate in Slack, and anywhere else you work.
+                            <h3>In every tool, at every step</h3>
+                            <p>Cursor reviews your PRs in GitHub, collaborates in Slack, and runs in your terminal.
                             </p>
-                            <div>Learn about Cursor's ecosystem →</div>
+                            <div>Learn about Cursor's surfaces →</div>
                         </div>
                     </div>
                     <div class="sec-3-3-right">
                         <div class="editor .editor-3-3 editor-3-31">
-                            <img draggable="false" src="assets/images/code-editor-s3-31.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-31-new.png" alt="">
                         </div>
                         <div class="editor .editor-3-3 editor-3-32">
-                            <img draggable="false" src="assets/images/code-editor-s3-32.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-32-new.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -141,8 +140,7 @@
                 <div class="testimonial-cards">
                     <div class="tml-card">
                         <div class="quote-container">
-                            <p>It was night and day from one batch to another, adoption went from single digits to over
-                                80%. It just spread like wildfire, all the best builders were using Cursor.</p>
+                            <p>“It was night and day from one batch to another, adoption went from single digits to over 80%. It just spread like wildfire, all the best builders were using Cursor.”</p>
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
@@ -156,25 +154,21 @@
                     </div>
                     <div class="tml-card">
                         <div class="quote-container">
-                            <p>The most useful AI tool that I currently pay for, hands down, is Cursor. It's fast,
-                                autocompletes when and where you need it to, handles brackets properly, sensible
-                                keyboard shortcuts, bring-your-own-model... everything is well put together.</p>
+                            <p>“My favorite enterprise AI service is Cursor. Every one of our engineers, some 40,000, are now assisted by AI and our productivity has gone up incredibly.”</p>
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img draggable="false" src="assets/avatars/shadcn-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/jensen-huang-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
-                                <h2>shadcn</h2>
-                                <p>Creator of shadcn/ui</p>
+                                <h2>Jensen Huang</h2>
+                                <p>President & CEO, NVIDIA</p>
                             </div>
                         </div>
                     </div>
                     <div class="tml-card">
                         <div class="quote-container">
-                            <p>The best LLM applications have an autonomy slider: you control how much independence to
-                                give the AI. In Cursor, you can do Tab completion, Cmd+K for targeted edits, or you can
-                                let it rip with the full autonomy agentic version.</p>
+                            <p>“The best LLM applications have an autonomy slider: you control how much independence to give the AI. In Cursor, you can do Tab completion, Cmd+K for targeted edits, or you can let it rip with the full autonomy agentic version.”</p>
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
@@ -188,10 +182,7 @@
                     </div>
                     <div class="tml-card">
                         <div class="quote-container">
-                            <p>Cursor quickly grew from hundreds to thousands of extremely enthusiastic Stripe
-                                employees. We spend more on R&D and software creation than any other undertaking, and
-                                there's significant economic outcomes when making that process more efficient and
-                                productive.</p>
+                            <p>“Cursor quickly grew from hundreds to thousands of extremely enthusiastic Stripe employees. We spend more on R&D and software creation than any other undertaking, and there's significant economic outcomes when making that process more efficient.”</p>
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
@@ -205,29 +196,21 @@
                     </div>
                     <div class="tml-card">
                         <div class="quote-container">
-                            <p>It's official.<br>
-                                <br>
-                                I hate vibe coding.<br>
-                                I love Cursor tab coding.<br>
-                                <br>
-                                It's wild.
-                            </p>
+                            <p>“The most useful AI tool that I currently pay for, hands down, is Cursor. It's fast, autocompletes when and where you need it to, handles brackets properly, sensible keyboard shortcuts, bring-your-own-model... everything is well put together.”</p>
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img draggable="false" src="assets/avatars/theprimeagen-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/shadcn-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
-                                <h2>ThePrimeagen</h2>
-                                <p>@ThePrimeagen</p>
+                                <h2>shadcn</h2>
+                                <p>Creator of shadcn/ui</p>
                             </div>
                         </div>
                     </div>
                     <div class="tml-card">
                         <div class="quote-container">
-                            <p>It's definitely becoming more fun to be a programmer. It's less about digging through
-                                pages and more about what you want to happen. We are at the 1% of what's possible, and
-                                it's in interactive experiences like Cursor where models like GPT-5 shine brightest.</p>
+                            <p>“It's definitely becoming more fun to be a programmer. We are at the 1% of what's possible, and it's in interactive experiences like Cursor where models like GPT-5 shine brightest.”</p>
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
@@ -250,8 +233,8 @@
                 <div class="frontier-section-cards">
                     <div class="frontier-card">
                         <div class="frontier-card-header">
-                            <h3>Access the best models</h3>
-                            <p>Choose between every cutting-edge model from OpenAI, Anthropic, Gemini, and xAI.</p>
+                            <h3>Use the best model for every task</h3>
+                            <p>Choose between every cutting-edge model from OpenAI, Anthropic, Gemini, xAI, and Cursor.</p>
                             <div>Explore models ↗</div>
                         </div>
                         <div class="frontier-card-1-body">
@@ -263,7 +246,7 @@
                         <div class="frontier-card-header">
                             <h3>Complete codebase understanding</h3>
                             <p>Cursor learns how your codebase works, no matter the scale or complexity.</p>
-                            <div>Learn about semantic search ↗</div>
+                            <div>Learn about codebase indexing ↗</div>
                         </div>
                         <div class="frontier-card-2-body">
                             <img draggable="false" src="assets/images/frontier-photo-2.png" alt="">
@@ -394,7 +377,7 @@
                 <h2>Try Cursor now.</h2>
             </div>
             <div class="section-9-cta">
-                <a href="">Download for macOS ⤓</a>
+                <a href="#">Download for macOS ⤓</a>
             </div>
         </section>
     </main>
@@ -404,55 +387,55 @@
                 <div class="footer-grid-item">
                     <h3>Product</h3>
                     <ul>
-                        <li><a href="">Agents</a></li>
-                        <li><a href="">Enterprise</a></li>
-                        <li><a href="">Code Review</a></li>
-                        <li><a href="">Tab</a></li>
-                        <li><a href="">CLI</a></li>
-                        <li><a href="">Cloud Agents</a></li>
-                        <li><a href="">Pricing</a></li>
+                        <li><a href="#">Agents</a></li>
+                        <li><a href="#">Enterprise</a></li>
+                        <li><a href="#">Code Review</a></li>
+                        <li><a href="#">Tab</a></li>
+                        <li><a href="#">CLI</a></li>
+                        <li><a href="#">Cloud Agents</a></li>
+                        <li><a href="#">Pricing</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Resources</h3>
                     <ul>
-                        <li><a href="">Download</a></li>
-                        <li><a href="">Changelog</a></li>
-                        <li><a href="">Docs</a></li>
-                        <li><a href="">Forum</a></li>
-                        <li><a href="">Status</a></li>
+                        <li><a href="#">Download</a></li>
+                        <li><a href="#">Changelog</a></li>
+                        <li><a href="#">Docs</a></li>
+                        <li><a href="#">Forum</a></li>
+                        <li><a href="#">Status</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Company</h3>
                     <ul>
-                        <li><a href="">Careers</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Community</a></li>
-                        <li><a href="">Students</a></li>
-                        <li><a href="">Brand</a></li>
-                        <li><a href="">Anysphere</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Students</a></li>
+                        <li><a href="#">Brand</a></li>
+                        <li><a href="#">Anysphere</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Legal</h3>
                     <ul>
-                        <li><a href="">Terms of Service</a></li>
-                        <li><a href="">Privacy Policy</a></li>
-                        <li><a href="">Data Use</a></li>
-                        <li><a href="">Security</a></li>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Data Use</a></li>
+                        <li><a href="#">Security</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Connect</h3>
                     <ul>
-                        <li><a href="">X</a></li>
-                        <li><a href="">LinkedIn</a></li>
-                        <li><a href="">YouTube</a></li>
+                        <li><a href="#">X</a></li>
+                        <li><a href="#">LinkedIn</a></li>
+                        <li><a href="#">YouTube</a></li>
                     </ul>
                 </div>
 
