Made href blank

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- This is the header section -->
     <header class="header">
         <div class="header-container">
-            <a href="#" class="logo">
+            <a href="" class="logo">
                 <!-- <img draggable="false" src="./assets/cursor-logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
                 <!-- Initially i used a image for logo but now i replaced it with a video, the logo animation is visible when we click it -->
                 <video src="./assets/cursor-logos/logo-animated-dark.mp4" width="22px" autoplay></video>
@@ -20,15 +20,15 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="#" class="nav-btn-1 nav-btn">Product</a></li>
-                    <li><a href="#" class="nav-btn-2 nav-btn">Enterprise</a></li>
-                    <li><a href="#" class="nav-btn-3 nav-btn">Pricing</a></li>
-                    <li><a href="#" class="nav-btn-4 nav-btn">Resources</a></li>
+                    <li><a href="" class="nav-btn-1 nav-btn">Product</a></li>
+                    <li><a href="" class="nav-btn-2 nav-btn">Enterprise</a></li>
+                    <li><a href="" class="nav-btn-3 nav-btn">Pricing</a></li>
+                    <li><a href="" class="nav-btn-4 nav-btn">Resources</a></li>
                 </ul>
             </nav>
             <div class="header-btns">
-                <a href="#" class="btn-sn">Sign in</a>
-                <a href="#" class="btn-dl">Download</a>
+                <a href="" class="btn-sn">Sign in</a>
+                <a href="" class="btn-dl">Download</a>
             </div>
     </header>
 
@@ -37,7 +37,7 @@
         <section class="main-sections section-1">
             <div class="hero-section">
                 <h1>Built to make you extraordinarily productive, Cursor is the best way to code with AI.</h1>
-                <a href="#" class="cta-btn">Download for macOS
+                <a href="" class="cta-btn">Download for macOS
                     <span> ⤓</span>
                 </a>
             </div>
@@ -377,7 +377,7 @@
                 <h2>Try Cursor now.</h2>
             </div>
             <div class="section-9-cta">
-                <a href="#">Download for macOS ⤓</a>
+                <a href="">Download for macOS ⤓</a>
             </div>
         </section>
     </main>
@@ -387,55 +387,55 @@
                 <div class="footer-grid-item">
                     <h3>Product</h3>
                     <ul>
-                        <li><a href="#">Agents</a></li>
-                        <li><a href="#">Enterprise</a></li>
-                        <li><a href="#">Code Review</a></li>
-                        <li><a href="#">Tab</a></li>
-                        <li><a href="#">CLI</a></li>
-                        <li><a href="#">Cloud Agents</a></li>
-                        <li><a href="#">Pricing</a></li>
+                        <li><a href="">Agents</a></li>
+                        <li><a href="">Enterprise</a></li>
+                        <li><a href="">Code Review</a></li>
+                        <li><a href="">Tab</a></li>
+                        <li><a href="">CLI</a></li>
+                        <li><a href="">Cloud Agents</a></li>
+                        <li><a href="">Pricing</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Resources</h3>
                     <ul>
-                        <li><a href="#">Download</a></li>
-                        <li><a href="#">Changelog</a></li>
-                        <li><a href="#">Docs</a></li>
-                        <li><a href="#">Forum</a></li>
-                        <li><a href="#">Status</a></li>
+                        <li><a href="">Download</a></li>
+                        <li><a href="">Changelog</a></li>
+                        <li><a href="">Docs</a></li>
+                        <li><a href="">Forum</a></li>
+                        <li><a href="">Status</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Company</h3>
                     <ul>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Community</a></li>
-                        <li><a href="#">Students</a></li>
-                        <li><a href="#">Brand</a></li>
-                        <li><a href="#">Anysphere</a></li>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Community</a></li>
+                        <li><a href="">Students</a></li>
+                        <li><a href="">Brand</a></li>
+                        <li><a href="">Anysphere</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Legal</h3>
                     <ul>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Data Use</a></li>
-                        <li><a href="#">Security</a></li>
+                        <li><a href="">Terms of Service</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Data Use</a></li>
+                        <li><a href="">Security</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-grid-item">
                     <h3>Connect</h3>
                     <ul>
-                        <li><a href="#">X</a></li>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">YouTube</a></li>
+                        <li><a href="">X</a></li>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">YouTube</a></li>
                     </ul>
                 </div>
 
