Updated pre footer CTA

--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
                 <h2>Try Cursor now.</h2>
             </div>
             <div class="section-9-cta">
-                <a href="">Download for macOS ⤓</a>
+                <a href="" class="cta-btn-2">Download for macOS
+                    <span> ⤓</span>
+                </a>
             </div>
         </section>
     </main>
