--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
                 <div class="footer-info-left">
                     <p>© 2026 Anysphere, Inc.</p>
                     <p>🛡 SOC 2 Certified</p>
+                    <p class="attribution">Cloned with 💪 by <a href="https://ashish.pro" target="_blank">Ashish 🦁</a></p>
                 </div>
                 <div class="footer-info-right">
                     <div class="theme-icons">
